# HypoGen

./: .gitignore  README.md  __init__.py  cli.py  config.py  exceptions.py  pyproject.toml
api/: routes.py
data/: __init__.py  schema.py
examples/: respiratory_disease_hypotheses.py
extraction/: claims.py
gaps/: scorer.py
graph/: builder.py
hypogen/api/: server.py
hypogen/extraction/: __init__.py
hypogen/gaps/: detector.py
hypogen/graph/: __init__.py  merger.py
hypogen/ingestion/: __init__.py  splitter.py
hypogen/llm/: __init__.py  adapter.py  parsers.py
hypotheses/: generator.py  ranker.py
ingestion/: loader.py
llm/: prompts.py
tests/: conftest.py  test_claims_extractor.py  test_cli.py  test_gap_detector.py  test_graph_builder.py  test_hypothesis_generator.py
tests/fixtures/papers/: air_pollution_cardiovascular.txt  exercise_intervention.txt  obesity_metabolic.txt  respiratory_disease.txt
